--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -12,22 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_19428/920293036.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_19428/3058550165.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_19428/920293036.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_19428/3058550165.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df2.columns = pd.Series(df2.columns).str.replace('.+\\.', '')\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv('./data_down/2week_sum.csv', sep = '\\001')\n",
+    "df = pd.read_csv('./data_down/1223_fifo_2wk.csv', sep = '\\001')\n",
     "df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
     "# df = df.iloc[:,6:]\n",
     "df2 =  pd.read_csv('./data_down/fifo_out_2w.csv', sep = '\\001')\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,390 +60,15 @@
     "\n",
     "\n",
     "    fefo.tail(8)\n",
-    "    return fefo\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 127,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ou_code</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>fifo_fefo</th>\n",
-       "      <th>start_of_week</th>\n",
-       "      <th>end_of_week</th>\n",
-       "      <th>sku</th>\n",
-       "      <th>old_remain_amt</th>\n",
-       "      <th>old_remain_location</th>\n",
-       "      <th>old_remain_date</th>\n",
-       "      <th>old_remain_lock_code</th>\n",
-       "      <th>new_export_amt</th>\n",
-       "      <th>new_export_location</th>\n",
-       "      <th>new_export_date</th>\n",
-       "      <th>new_export_lock_codes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA011261</td>\n",
-       "      <td>1650.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-02-02</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>285.500000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-03</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020348</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-02-09</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>817.000000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-01</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020543</td>\n",
-       "      <td>627.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-02-28</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>671.500000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-01</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020760</td>\n",
-       "      <td>78.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>1038.000000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-01-27</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020767</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-02-19</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>783.000000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-02-26</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020784</td>\n",
-       "      <td>221.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-01-21</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>1122.000000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-01-28</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA020791</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-02-26</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>823.000000</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-02-28</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA030419</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>D-05-26-05,SHIP-01</td>\n",
-       "      <td>2022-06-03</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>139.000000</td>\n",
-       "      <td>D-05-11-02</td>\n",
-       "      <td>2022-12-01</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA050026</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>D-07-08-02,SHIP-01</td>\n",
-       "      <td>2023-05-06</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>55.500000</td>\n",
-       "      <td>D-07-03-01</td>\n",
-       "      <td>2023-11-22</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>COSTA060005</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>D-07-06-03,SHIP-01</td>\n",
-       "      <td>2024-03-06</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>12.500000</td>\n",
-       "      <td>D-07-12-05</td>\n",
-       "      <td>2024-06-10</td>\n",
-       "      <td>Available</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>MICHETCTGS</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>037639_106</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>E-15-18,E-18-04</td>\n",
-       "      <td>2023-09-01</td>\n",
-       "      <td>ONHAND_HU-16I</td>\n",
-       "      <td>26.000000</td>\n",
-       "      <td>G-11-08</td>\n",
-       "      <td>2024-01-01</td>\n",
-       "      <td>ONHAND_HU-16I</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>MICHETCTGS</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>439132_104</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>H-05-15,H-01-13</td>\n",
-       "      <td>2023-09-01</td>\n",
-       "      <td>ONHAND_US-1AP</td>\n",
-       "      <td>123.833333</td>\n",
-       "      <td>SHIP01,SCE-28-04-05,SCD-00-01</td>\n",
-       "      <td>2024-05-01</td>\n",
-       "      <td>ONHAND_US-1AP</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>MICHETCTGS</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>468193_105</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>E-22-07</td>\n",
-       "      <td>2024-04-01</td>\n",
-       "      <td>ONHAND_CN-17V</td>\n",
-       "      <td>865.333333</td>\n",
-       "      <td>B-2-25,C-7-19,C-11-21,B-3-25,C-4-15,A-6-12,A-1...</td>\n",
-       "      <td>2024-10-01</td>\n",
-       "      <td>ONHAND_CN-17V</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>MICHETCTGS</td>\n",
-       "      <td>RT</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211210</td>\n",
-       "      <td>20211217</td>\n",
-       "      <td>919695_108</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>SCE-18-04-01</td>\n",
-       "      <td>2024-08-01</td>\n",
-       "      <td>ONHAND_IM-1IM</td>\n",
-       "      <td>26.250000</td>\n",
-       "      <td>E-13-04</td>\n",
-       "      <td>2024-09-01</td>\n",
-       "      <td>ONHAND_IM-1IM</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ou_code wms_warehouse_id fifo_fefo  start_of_week  end_of_week  \\\n",
-       "0   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "1   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "2   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "3   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "4   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "5   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "6   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "7   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "8   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "9   COSTASHHTS         COSTA_SH      fefo       20211210     20211217   \n",
-       "10  MICHETCTGS               RT      fefo       20211210     20211217   \n",
-       "11  MICHETCTGS               RT      fefo       20211210     20211217   \n",
-       "12  MICHETCTGS               RT      fefo       20211210     20211217   \n",
-       "13  MICHETCTGS               RT      fefo       20211210     20211217   \n",
-       "\n",
-       "            sku  old_remain_amt    old_remain_location old_remain_date  \\\n",
-       "0   COSTA011261          1650.0  D-115-05-03-A,SHIP-01      2022-02-02   \n",
-       "1   COSTA020348           116.0  D-115-05-03-A,SHIP-01      2022-02-09   \n",
-       "2   COSTA020543           627.0  D-115-05-03-A,SHIP-01      2022-02-28   \n",
-       "3   COSTA020760            78.0  D-115-05-03-A,SHIP-01      2022-01-21   \n",
-       "4   COSTA020767            15.0  D-115-05-03-A,SHIP-01      2022-02-19   \n",
-       "5   COSTA020784           221.0  D-115-05-03-A,SHIP-01      2022-01-21   \n",
-       "6   COSTA020791            55.0  D-115-05-03-A,SHIP-01      2022-02-26   \n",
-       "7   COSTA030419            21.0     D-05-26-05,SHIP-01      2022-06-03   \n",
-       "8   COSTA050026            10.0     D-07-08-02,SHIP-01      2023-05-06   \n",
-       "9   COSTA060005             3.0     D-07-06-03,SHIP-01      2024-03-06   \n",
-       "10   037639_106            46.0        E-15-18,E-18-04      2023-09-01   \n",
-       "11   439132_104            12.0        H-05-15,H-01-13      2023-09-01   \n",
-       "12   468193_105             1.0                E-22-07      2024-04-01   \n",
-       "13   919695_108             4.0           SCE-18-04-01      2024-08-01   \n",
-       "\n",
-       "   old_remain_lock_code  new_export_amt  \\\n",
-       "0             Available      285.500000   \n",
-       "1             Available      817.000000   \n",
-       "2             Available      671.500000   \n",
-       "3             Available     1038.000000   \n",
-       "4             Available      783.000000   \n",
-       "5             Available     1122.000000   \n",
-       "6             Available      823.000000   \n",
-       "7             Available      139.000000   \n",
-       "8             Available       55.500000   \n",
-       "9             Available       12.500000   \n",
-       "10        ONHAND_HU-16I       26.000000   \n",
-       "11        ONHAND_US-1AP      123.833333   \n",
-       "12        ONHAND_CN-17V      865.333333   \n",
-       "13        ONHAND_IM-1IM       26.250000   \n",
-       "\n",
-       "                                  new_export_location new_export_date  \\\n",
-       "0                                       D-115-05-03-A      2022-03-03   \n",
-       "1                                       D-115-05-03-A      2022-03-01   \n",
-       "2                                       D-115-05-03-A      2022-03-01   \n",
-       "3                                       D-115-05-03-A      2022-01-27   \n",
-       "4                                       D-115-05-03-A      2022-02-26   \n",
-       "5                                       D-115-05-03-A      2022-01-28   \n",
-       "6                                       D-115-05-03-A      2022-02-28   \n",
-       "7                                          D-05-11-02      2022-12-01   \n",
-       "8                                          D-07-03-01      2023-11-22   \n",
-       "9                                          D-07-12-05      2024-06-10   \n",
-       "10                                            G-11-08      2024-01-01   \n",
-       "11                      SHIP01,SCE-28-04-05,SCD-00-01      2024-05-01   \n",
-       "12  B-2-25,C-7-19,C-11-21,B-3-25,C-4-15,A-6-12,A-1...      2024-10-01   \n",
-       "13                                            E-13-04      2024-09-01   \n",
-       "\n",
-       "   new_export_lock_codes  \n",
-       "0              Available  \n",
-       "1              Available  \n",
-       "2              Available  \n",
-       "3              Available  \n",
-       "4              Available  \n",
-       "5              Available  \n",
-       "6              Available  \n",
-       "7              Available  \n",
-       "8              Available  \n",
-       "9              Available  \n",
-       "10         ONHAND_HU-16I  \n",
-       "11         ONHAND_US-1AP  \n",
-       "12         ONHAND_CN-17V  \n",
-       "13         ONHAND_IM-1IM  "
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "    return fefo\n",
     "\n",
     "def data2_(stats, df):\n",
-    "    if stats == 'fifo':\n",
-    "        t = False\n",
-    "    else:\n",
-    "        t = True\n",
     "    fefo = df\n",
-    "    fefo_out = fefo.sort_values(['sku' , 'received_date'], ascending=t).groupby(\n",
+    "    if stats == 'fifo':\n",
+    "        fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
+    "    else:\n",
+    "        fefo = fefo.sort_values(['sku' , 'received_date'], ascending=False)\n",
+    "    fefo_out = fefo.groupby(\n",
     "        ['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week', 'sku'] , as_index= False\n",
     "        ).agg(\n",
     "            old_remain_amt = ('week_7', 'first'), # old remain\n",
@@ -456,7 +81,7 @@
     "            new_export_date = ('received_date', 'last'), \n",
     "            new_export_lock_codes = ('lock_codes', 'first'), \n",
     "    )\n",
-    "    return fefo_out"
+    "    return fefo_out\n"
    ]
   },
   {
@@ -465,12 +90,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# fefo_out = fefo_out[~fefo_out['old_remain_location'].str.contains(fefo_out['new_export_location'][0])]\n"
+    "# fefo_out = fefo_out[~fefo_out['old_remain_location'].str.contains(fefo_out['new_export_location'][0])]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,12 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat([data2_('fefo', fefo), \n",
-    "data2_('fifo', fifo)], axis = 0).to_csv('./data_up/fifo_fefo_alert_1210_1217.csv', index = None, encoding = 'utf_8_sig')"
+    "pd.concat([\n",
+    "    data2_('fefo', fefo), data2_('fifo', fifo)\n",
+    "    ], axis = 0)\\\n",
+    "        .to_csv('./data_up/fifo_fefo_alert_thur.csv', index = None, encoding = 'utf_8_sig')"
    ]
   },
   {
