--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -425,26 +425,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date \n",
+    "def allsundays(year):\n",
+    "        \"\"\"\n",
+    "        十年, \n",
+    "        \"\"\"\n",
+    "        return pd.Series(pd.date_range(start=str(year), end=str(year+10), \n",
+    "                            freq=\"W-FRI\").strftime('%Y%m%d'))\n",
+    "fridays = tuple([\n",
+    "        i for i in list(\n",
+    "            allsundays(2021)[allsundays(2021) < date.today().strftime('%Y%m%d')][-int(1):])])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week',\n",
-       "       'end_of_week', 'sku', 'old_remain_amt', 'old_remain_location',\n",
-       "       'old_remain_date', 'old_remain_lock_code', 'new_export_amt',\n",
-       "       'new_export_location', 'new_export_date', 'new_export_lock_codes'],\n",
-       "      dtype='object')"
+       "'20211224'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_out.columns"
+    "fridays"
    ]
   }
  ],
