--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -30,47 +30,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def data_(stats):\n",
+    "    \"\"\"\n",
+    "    对数据筛选分类\n",
+    "    \"\"\"\n",
     "    fefo = df[df['fifo_fefo'] == stats].sort_values(['sku' , 'received_date' ], ascending=True)\n",
     "    fefo = fefo[fefo['week_7']!=0]\n",
     "    fefo['out_amt'] = fefo['week_6'] - fefo['week_7']\n",
     "\n",
     "\n",
     "    fefo['flag'] = fefo.groupby(\n",
-    "        ['sku', 'ou_code', 'wms_warehouse_id',   'fifo_fefo', 'start_of_week', 'end_of_week']\n",
+    "        ['sku', 'ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week']\n",
     "        )['sku'].transform('count')\n",
     "    fefo = fefo[fefo['flag'] != 1]\n",
     "\n",
     "    fefo['flag'] = fefo.groupby(\n",
-    "        ['sku', 'ou_code', 'wms_warehouse_id',   'fifo_fefo', 'start_of_week', 'end_of_week']\n",
+    "        ['sku', 'ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week']\n",
     "        )['out_amt'].transform(min)\n",
     "    fefo = fefo[fefo['flag'] > 0]\n",
     "    fefo.tail(8)\n",
     "    return fefo\n",
-    "def data2_(stats, df):\n",
-    "    fefo = df\n",
-    "    if stats == 'fifo':\n",
-    "        fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
-    "    else:\n",
-    "        fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
-    "    fefo_out = fefo.groupby(\n",
-    "        ['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week', 'sku'] , as_index= False\n",
-    "        ).agg(\n",
-    "            old_remain_amt = ('week_7', 'first'), # old remain\n",
-    "            old_remain_location = ('location', 'first'), # 易过期\n",
-    "            old_remain_date = ('received_date', 'first'), \n",
-    "            old_remain_lock_code = ('lock_codes', 'first'), \n",
+    "# def data2_(stats, df):\n",
+    "#     fefo = df\n",
+    "#     if stats == 'fifo':\n",
+    "#         fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
+    "#     else:\n",
+    "#         fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
+    "#     fefo_out = fefo.groupby(\n",
+    "#         ['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week', 'sku'] , as_index= False\n",
+    "#         ).agg(\n",
+    "#             old_remain_amt = ('week_7', 'first'), # old remain\n",
+    "#             old_remain_location = ('location', 'first'), # 易过期\n",
+    "#             old_remain_date = ('received_date', 'first'), \n",
+    "#             old_remain_lock_code = ('lock_codes', 'first'), \n",
     "\n",
-    "            new_export_amt = ('out_amt', 'mean'),  # new export\n",
-    "            new_export_location = ('location', 'last'),\n",
-    "            new_export_date = ('received_date', 'last'), \n",
-    "            new_export_lock_codes = ('lock_codes', 'first'), \n",
-    "    )\n",
-    "    return fefo_out\n"
+    "#             new_export_amt = ('out_amt', 'mean'),  # new export\n",
+    "#             new_export_location = ('location', 'last'),\n",
+    "#             new_export_date = ('received_date', 'last'), \n",
+    "#             new_export_lock_codes = ('lock_codes', 'last'), \n",
+    "#     )\n",
+    "#     return fefo_out\n",
+    "\n",
+    "def data2_(stats, df):\n",
+    "        fefo = df\n",
+    "        if stats == 'fifo':\n",
+    "            fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True)\n",
+    "        else:\n",
+    "            fefo = fefo.sort_values(['sku' , 'received_date'], ascending=True) \n",
+    "            # ? 搞不懂发生了什么. 但这样的结果才是正确的..\n",
+    "        fefo_out = fefo.groupby(\n",
+    "            ['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week', 'end_of_week', 'sku'],\n",
+    "            as_index= False\n",
+    "        #     ).agg(\n",
+    "        #         old_remain_amt = ('week_7', 'first'), # old remain\n",
+    "        #         old_remain_location = ('location', 'first'), # 易过期\n",
+    "        #         old_remain_date = ('received_date', 'first'), \n",
+    "        #         old_remain_lock_code = ('lock_codes', 'first'), \n",
+    "\n",
+    "        #         new_export_amt = ('out_amt', 'mean'),  # new export\n",
+    "        #         new_export_location = ('location', 'last'),\n",
+    "        #         new_export_date = ('received_date', 'last'), \n",
+    "        #         new_export_lock_codes = ('lock_codes', 'first'), \n",
+    "        # )   # version failed.\n",
+    "            ).agg({\n",
+    "                'week_7' : [('old_remain_amt', 'first')], \n",
+    "                'out_amt' : [('new_export_amt', 'first')], \n",
+    "                'location': [('old_remain_location', 'first'), ('new_export_location', 'last')], \n",
+    "                'received_date': [('old_remain_date','first'), ('new_export_date', 'last')],\n",
+    "                'lock_codes':[('old_remain_lock_code','first'), ('new_export_lock_codes', 'last')],\n",
+    "                }\n",
+    "        )\n",
+    "        return fefo_out"
    ]
   },
   {
@@ -84,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,321 +141,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ou_code</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>fifo_fefo</th>\n",
-       "      <th>start_of_week</th>\n",
-       "      <th>end_of_week</th>\n",
-       "      <th>sku</th>\n",
-       "      <th>old_remain_amt</th>\n",
-       "      <th>old_remain_location</th>\n",
-       "      <th>old_remain_date</th>\n",
-       "      <th>old_remain_lock_code</th>\n",
-       "      <th>new_export_amt</th>\n",
-       "      <th>new_export_location</th>\n",
-       "      <th>new_export_date</th>\n",
-       "      <th>new_export_lock_codes</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>6ZD29AA</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>SHIP1,11-04-3,22-09-A</td>\n",
-       "      <td>2021-11-30</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>839.250000</td>\n",
-       "      <td>12-07-2,SHIP1,12-12-2</td>\n",
-       "      <td>2021-12-07</td>\n",
-       "      <td>1001-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>C2P04AA</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>SHIP1,16-19-2</td>\n",
-       "      <td>2021-11-30</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>3235.500000</td>\n",
-       "      <td>09-03-2,14-08-3,13-09-4</td>\n",
-       "      <td>2021-12-16</td>\n",
-       "      <td>1001-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>CE320A</td>\n",
-       "      <td>108.0</td>\n",
-       "      <td>P-08-09-2</td>\n",
-       "      <td>2021-06-18</td>\n",
-       "      <td>1008-34</td>\n",
-       "      <td>39.333333</td>\n",
-       "      <td>P-12-23-3,P-02-14-1,P-09-27-3</td>\n",
-       "      <td>2021-12-16</td>\n",
-       "      <td>1008-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>CF226XC</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>23-08-3</td>\n",
-       "      <td>2021-10-19</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>31.750000</td>\n",
-       "      <td>P-09-01-1,P-06-23-1</td>\n",
-       "      <td>2021-10-21</td>\n",
-       "      <td>1001-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>CF380A</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>09-05-3</td>\n",
-       "      <td>2021-10-13</td>\n",
-       "      <td>1008-34</td>\n",
-       "      <td>12.250000</td>\n",
-       "      <td>P-01-05-1,22-10-A</td>\n",
-       "      <td>2021-12-16</td>\n",
-       "      <td>1008-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>CN623AA</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>X-21-09-2</td>\n",
-       "      <td>2021-06-18</td>\n",
-       "      <td>1008-34</td>\n",
-       "      <td>25.000000</td>\n",
-       "      <td>20-03-3</td>\n",
-       "      <td>2021-11-19</td>\n",
-       "      <td>1008-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>CN624AA</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>SMALL-51</td>\n",
-       "      <td>2021-08-25</td>\n",
-       "      <td>1008-34</td>\n",
-       "      <td>29.000000</td>\n",
-       "      <td>20-06-3</td>\n",
-       "      <td>2021-11-19</td>\n",
-       "      <td>1008-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>HPPXXSHMGS</td>\n",
-       "      <td>HPI_SH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>T6N12AA</td>\n",
-       "      <td>178.5</td>\n",
-       "      <td>14-04-A,SHIP1</td>\n",
-       "      <td>2021-11-30</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>368.250000</td>\n",
-       "      <td>14-04-B</td>\n",
-       "      <td>2021-12-07</td>\n",
-       "      <td>1001-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>HPPXXWHWDS</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>SU847A</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>B-05-53-2</td>\n",
-       "      <td>2021-12-02</td>\n",
-       "      <td>1001-34</td>\n",
-       "      <td>230.000000</td>\n",
-       "      <td>C-03-40-2</td>\n",
-       "      <td>2021-12-10</td>\n",
-       "      <td>1001-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>HPPXXWHWDS</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>W9044MC</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>B-03-47-C</td>\n",
-       "      <td>2021-11-17</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>27.500000</td>\n",
-       "      <td>A-01-19-2</td>\n",
-       "      <td>2021-12-13</td>\n",
-       "      <td>1002-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>HPPXXWHWDS</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>W9052MC</td>\n",
-       "      <td>156.0</td>\n",
-       "      <td>A-02-15-1,A-01-34-2,A-01-32-2</td>\n",
-       "      <td>2021-06-06</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>17.000000</td>\n",
-       "      <td>B-14-41-2</td>\n",
-       "      <td>2021-11-25</td>\n",
-       "      <td>1002-34</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>HPPXXWHWDS</td>\n",
-       "      <td>HPI_WH</td>\n",
-       "      <td>fifo</td>\n",
-       "      <td>20211216</td>\n",
-       "      <td>20211223</td>\n",
-       "      <td>W9190MC</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>B-02-42-2</td>\n",
-       "      <td>2021-07-12</td>\n",
-       "      <td>1002-34</td>\n",
-       "      <td>93.500000</td>\n",
-       "      <td>A-11-41-2</td>\n",
-       "      <td>2021-12-13</td>\n",
-       "      <td>1002-34</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       ou_code wms_warehouse_id fifo_fefo  start_of_week  end_of_week  \\\n",
-       "0   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "1   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "2   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "3   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "4   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "5   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "6   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "7   HPPXXSHMGS           HPI_SH      fifo       20211216     20211223   \n",
-       "8   HPPXXWHWDS           HPI_WH      fifo       20211216     20211223   \n",
-       "9   HPPXXWHWDS           HPI_WH      fifo       20211216     20211223   \n",
-       "10  HPPXXWHWDS           HPI_WH      fifo       20211216     20211223   \n",
-       "11  HPPXXWHWDS           HPI_WH      fifo       20211216     20211223   \n",
-       "\n",
-       "        sku  old_remain_amt            old_remain_location old_remain_date  \\\n",
-       "0   6ZD29AA            14.0          SHIP1,11-04-3,22-09-A      2021-11-30   \n",
-       "1   C2P04AA             6.0                  SHIP1,16-19-2      2021-11-30   \n",
-       "2    CE320A           108.0                      P-08-09-2      2021-06-18   \n",
-       "3   CF226XC            63.0                        23-08-3      2021-10-19   \n",
-       "4    CF380A             8.5                        09-05-3      2021-10-13   \n",
-       "5   CN623AA            18.0                      X-21-09-2      2021-06-18   \n",
-       "6   CN624AA             9.0                       SMALL-51      2021-08-25   \n",
-       "7   T6N12AA           178.5                  14-04-A,SHIP1      2021-11-30   \n",
-       "8    SU847A            40.0                      B-05-53-2      2021-12-02   \n",
-       "9   W9044MC             2.0                      B-03-47-C      2021-11-17   \n",
-       "10  W9052MC           156.0  A-02-15-1,A-01-34-2,A-01-32-2      2021-06-06   \n",
-       "11  W9190MC           167.0                      B-02-42-2      2021-07-12   \n",
-       "\n",
-       "   old_remain_lock_code  new_export_amt            new_export_location  \\\n",
-       "0               1001-34      839.250000          12-07-2,SHIP1,12-12-2   \n",
-       "1               1001-34     3235.500000        09-03-2,14-08-3,13-09-4   \n",
-       "2               1008-34       39.333333  P-12-23-3,P-02-14-1,P-09-27-3   \n",
-       "3               1001-34       31.750000            P-09-01-1,P-06-23-1   \n",
-       "4               1008-34       12.250000              P-01-05-1,22-10-A   \n",
-       "5               1008-34       25.000000                        20-03-3   \n",
-       "6               1008-34       29.000000                        20-06-3   \n",
-       "7               1001-34      368.250000                        14-04-B   \n",
-       "8               1001-34      230.000000                      C-03-40-2   \n",
-       "9               1002-34       27.500000                      A-01-19-2   \n",
-       "10              1002-34       17.000000                      B-14-41-2   \n",
-       "11              1002-34       93.500000                      A-11-41-2   \n",
-       "\n",
-       "   new_export_date new_export_lock_codes  \n",
-       "0       2021-12-07               1001-34  \n",
-       "1       2021-12-16               1001-34  \n",
-       "2       2021-12-16               1008-34  \n",
-       "3       2021-10-21               1001-34  \n",
-       "4       2021-12-16               1008-34  \n",
-       "5       2021-11-19               1008-34  \n",
-       "6       2021-11-19               1008-34  \n",
-       "7       2021-12-07               1001-34  \n",
-       "8       2021-12-10               1001-34  \n",
-       "9       2021-12-13               1002-34  \n",
-       "10      2021-11-25               1002-34  \n",
-       "11      2021-12-13               1002-34  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data2_('fifo', fifo)"
+    "df_out.columns = list(df_out.columns.get_level_values(0)[0:6]) + list(df_out.columns.get_level_values(1)[6:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -443,22 +175,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'20211224'"
+       "Index(['ou_code', 'wms_warehouse_id', 'fifo_fefo', 'start_of_week',\n",
+       "       'end_of_week', 'sku', 'old_remain_amt', 'old_remain_location',\n",
+       "       'old_remain_date', 'old_remain_lock_code', 'new_export_amt',\n",
+       "       'new_export_location', 'new_export_date', 'new_export_lock_codes'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fridays"
+    "df_out.columns"
    ]
   }
  ],
