break at wmos, snapshot, chunk 58

--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4820/1307593119.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_412/1307593119.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4820/1307593119.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_412/1307593119.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df2.columns = pd.Series(df2.columns).str.replace('.+\\.', '')\n"
      ]
     }
@@ -27,6 +27,33 @@
     "# df = df.iloc[:,6:]\n",
     "# df = df2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = 'HPPXXWHWDS'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'HPPXX'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
