--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/3798238643.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/3798238643.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df2.columns = pd.Series(df2.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/3798238643.py:12: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:12: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  df3.columns = pd.Series(df3.columns).str.replace('.+\\.', '')\n"
      ]
     }
@@ -29,7 +29,7 @@
     "# df = df.iloc[:,6:]\n",
     "# df = df2\n",
     "\n",
-    "df3 = pd.read_csv('./data_up/fifofefo_20220103_m.csv', sep = '|')\n",
+    "df3 = pd.read_csv('./data_down/fifo_fefo_0104.csv', sep = '\\001')\n",
     "df3.columns = pd.Series(df3.columns).str.replace('.+\\.', '')"
    ]
   },
@@ -44,118 +44,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ou_code</th>\n",
-       "      <th>wms_warehouse_id</th>\n",
-       "      <th>fifo_fefo</th>\n",
-       "      <th>start_of_week</th>\n",
-       "      <th>end_of_week</th>\n",
-       "      <th>sku</th>\n",
-       "      <th>old_remain_amt</th>\n",
-       "      <th>old_remain_location</th>\n",
-       "      <th>old_remain_date</th>\n",
-       "      <th>old_remain_lock_code</th>\n",
-       "      <th>new_export_amt</th>\n",
-       "      <th>new_export_location</th>\n",
-       "      <th>new_export_date</th>\n",
-       "      <th>new_export_lock_codes</th>\n",
-       "      <th>inc_day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211227</td>\n",
-       "      <td>20220103</td>\n",
-       "      <td>COSTA020655</td>\n",
-       "      <td>1831.0</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-20</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>4145.0</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-21</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>20220103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>COSTASHHTS</td>\n",
-       "      <td>COSTA_SH</td>\n",
-       "      <td>fefo</td>\n",
-       "      <td>20211227</td>\n",
-       "      <td>20220103</td>\n",
-       "      <td>COSTA020745</td>\n",
-       "      <td>286.0</td>\n",
-       "      <td>D-115-05-03-A,SHIP-01</td>\n",
-       "      <td>2022-03-14</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>1972.0</td>\n",
-       "      <td>D-115-05-03-A</td>\n",
-       "      <td>2022-03-21</td>\n",
-       "      <td>Available</td>\n",
-       "      <td>20220103</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      ou_code wms_warehouse_id fifo_fefo  start_of_week  end_of_week  \\\n",
-       "0  COSTASHHTS         COSTA_SH      fefo       20211227     20220103   \n",
-       "1  COSTASHHTS         COSTA_SH      fefo       20211227     20220103   \n",
-       "\n",
-       "           sku  old_remain_amt    old_remain_location old_remain_date  \\\n",
-       "0  COSTA020655          1831.0          D-115-05-03-A      2022-03-20   \n",
-       "1  COSTA020745           286.0  D-115-05-03-A,SHIP-01      2022-03-14   \n",
-       "\n",
-       "  old_remain_lock_code  new_export_amt new_export_location new_export_date  \\\n",
-       "0            Available          4145.0       D-115-05-03-A      2022-03-21   \n",
-       "1            Available          1972.0       D-115-05-03-A      2022-03-21   \n",
-       "\n",
-       "  new_export_lock_codes   inc_day  \n",
-       "0             Available  20220103  \n",
-       "1             Available  20220103  "
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# df3 = df3.iloc[22:, :]\n",
     "df3.head(2)\n",
     "# df3['new_export_date'].str.match('(\\d{4}\\-\\d{2}\\-\\d{2})')\n",
     "\n",
-    "# df3\\\n",
-    "    # .query(\"ou_code != 'MICHETCTGS' & ou_code != 'MICHESHXCS'\").to_csv('./data_up/fifofefo_20220103_m2.csv')"
+    "df3\\\n",
+    "    .to_csv('./data_up/fifofefo_20220104_T.csv')"
    ]
   },
   {
