--- a/fifo_post.ipynb
+++ b/fifo_post.ipynb
@@ -2,25 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:7: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df2.columns = pd.Series(df2.columns).str.replace('.+\\.', '')\n",
-      "C:\\Users\\DSCSHA~1\\AppData\\Local\\Temp/ipykernel_4168/813259610.py:12: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  df3.columns = pd.Series(df3.columns).str.replace('.+\\.', '')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "df = pd.read_csv('./data_down/1223_fifo_2wk.csv', sep = '\\001')\n",
     "df.columns = pd.Series(df.columns).str.replace('.+\\.', '')\n",
     "# df = df.iloc[:,6:]\n",
@@ -29,22 +18,24 @@
     "# df = df.iloc[:,6:]\n",
     "# df = df2\n",
     "\n",
-    "df3 = pd.read_csv('./data_down/fifo_fefo_0104.csv', sep = '\\001')\n",
+    "df3 = pd.read_csv('./data_down/fifo_fefo_alrt_0105.csv', sep = '\\001')\n",
     "df3.columns = pd.Series(df3.columns).str.replace('.+\\.', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts = 'HPPXXWHWDS'"
+    "# ts = 'HPPXXWHWDS'\n",
+    "df3['old_remain_location'] = df3['old_remain_location'].str.replace('\\{|\\}|\\'', '')\n",
+    "df3['new_export_location'] = df3['new_export_location'].str.replace('\\{|\\}|\\'', '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +44,7 @@
     "# df3['new_export_date'].str.match('(\\d{4}\\-\\d{2}\\-\\d{2})')\n",
     "\n",
     "df3\\\n",
-    "    .to_csv('./data_up/fifofefo_20220104_T.csv')"
+    "    .to_csv('./data_up/fifofefo_20220105_W.csv')"
    ]
   },
   {
